--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,72 +4,47 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.asistan-mesaji {
-    position: absolute;
+.asistan-mesaji,
+.kullanıcı-mesaji {
+    position: relative;
     background-color: #313131;
     border-radius: 10px;
     width: 500px;
-    left: 10px;
-    height: calc(height + 100);
-    margin-top: 10px;
+    margin: 10px auto;
+    padding: 20px;
+}
+
+.asistan-mesaji img,
+.kullanıcı-mesaji img {
+    border-radius: 50%;
+    height: 45px;
+    width: 45px;
+    margin-right: 10px;
+}
+
+.asistan-mesaji img {
+    float: left;
+}
+
+.kullanıcı-mesaji img {
+    float: right;
+}
+
+.asistan-mesaji p,
+.kullanıcı-mesaji p {
+    margin-left: 0px
 }
 
 .asistan-mesaji h3 {
-    position: relative;
-    left: 70px;
-    top: -47px;
-}
-
-
-.asistan-mesaji img {
-    position: relative;
-    border-radius: 100%;
-    height: 45px;
-    width: 45px;
-    left: 10px;
-    top: 10px;
-}
-
-.asistan-mesaji p {
-    position: relative;
-    left: 10px;
-}
-
-
-
-.kullanıcı-mesaji {
-    position: absolute;
-    background-color: #313131;
-    border-radius: 10px;
-    width: 500px;
-    right: 10px;
-    height: calc(height + 100);
-    margin-top: 10px;
-}
-
-
-
-
-.kullanıcı-mesaji img {
-    position: relative;
-    top: 10px;
-    right: -440px;
-    height: 45px;
-    width: 45px;
-    border-radius: 100%;
-}
-
-
-.kullanıcı-mesaji p {
-    position: relative;
-    left: 10px;
+    margin-left: 60px;
 }
 
 .code {
     border-radius: 10px;
-    width: 450px;
+    width: 400px;
     height: calc(height + 10);
     background-color: #272727;
+    padding: 10px;
 }
 
 .link {
